--- a/index.html
+++ b/index.html
@@ -180,7 +180,31 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
+  var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
 
+//Cкоростью фаербола в зависимости от направления ветра
+  var getFireballSpeed = function(left) {
+    return left ? 5 : 2;
+  };
+
+//Функция, которая возвращает пропорциональную высоту мага
+  var getWizardHeight = function () {
+    return 1.337 * wizardWidth;
+  };
+
+//Функция, чтобы задать положение мага по горизонтали
+  var getWizardX = function(width) {
+    return width / 2 - wizardWidth / 2;
+  };
+
+//Функция, чтобы задать положение мага по вертикали
+  var getWizardY = function(height) {
+    return height / 3;
+  };
+</script>
 <script src="js/game.js"></script>
 
 </body>
